log/build_2024-07-20_23-07-33/initialGoalpub_py/stderr.log
  File "/media/muayman17/New/Muhammad/BrightSkies Test/BlocksRearrengmentsROS2/install/initialGoalpub_py/lib/python3.8/site-packages/initialGoalpub_py/initialGoalpub.py", line 107
    else
       ^
SyntaxError: invalid syntax

